--- a/renderer/public/style.css
+++ b/renderer/public/style.css
@@ -2,4 +2,5 @@ body {
     background: #eee;
     margin: 0;
     padding: 5px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
