--- a/renderer/styles/tabs.module.css
+++ b/renderer/styles/tabs.module.css
@@ -28,10 +28,12 @@
 
 .tab:hover {
     background: #f5f5f5;
+    border-color: #999;
 }
 
 .tab.selected {
     background: #fff;
+    border-color: #999;
 }
 
 .body {
