Styling / formatting for tx info. Reduce default app font to 12px.

--- a/renderer/public/style.css
+++ b/renderer/public/style.css
@@ -1,6 +1,7 @@
 body {
     background: #eee;
     margin: 0;
+    font-size: 12px;
     padding: 5px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
