--- a/renderer/styles/addWallet.module.css
+++ b/renderer/styles/addWallet.module.css
@@ -8,6 +8,12 @@
     height: 100%;
 }
 
+.bitcoinKeys {
+    flex-grow: 1;
+    resize: none;
+    width: 100%;
+}
+
 .buttons {
     align-items: center;
     display: flex;
@@ -22,12 +28,15 @@
 
 .box {
     border: 1px solid #999;
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
-    padding: 20px;
     margin-left: 20px;
+    padding: 20px;
 }
 
 .boxMain {
+    flex-grow: 1;
     padding: 20px;
 }
 
@@ -42,6 +51,11 @@
     margin-top: 10px;
 }
 
+.importKeys .boxMain {
+    display: flex;
+    flex-direction: column;
+}
+
 .input {
     margin-left: 8px;
     margin-right: 16px;
@@ -52,6 +66,7 @@
 }
 
 .seedPhrase {
+    height: 3.5em;
     resize: none;
     width: 100%;
 }
