Sticky top row of history

--- a/renderer/styles/history.module.css
+++ b/renderer/styles/history.module.css
@@ -7,6 +7,12 @@
 .wrapper .row {
     display: contents;
 }
+
+.wrapper .rowTitle span {
+    position: sticky;
+    top: 0;
+}
+
 .wrapper .rowTitle span {
     background: #eee;
 }
