--- a/renderer/styles/history.module.css
+++ b/renderer/styles/history.module.css
@@ -2,6 +2,7 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(4, minmax(max-content, 1fr));
+    outline: none;
 }
 
 .wrapper .row {
