Include height in history table. Display confirmed column in history page.

--- a/renderer/styles/history.module.css
+++ b/renderer/styles/history.module.css
@@ -5,6 +5,10 @@
     outline: none;
 }
 
+.wrapper5 {
+    grid-template-columns: 30px repeat(4, minmax(max-content, 1fr));
+}
+
 .wrapper .message {
     padding: 5px;
     margin: 0;
