Handle no profile image. Hide edit profile forms.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -4,10 +4,20 @@
     grid-template-columns: repeat(2, max-content);
 }
 
-.pic img {
+.pic {
+    margin-right: 5px;
+}
+
+.pic .img {
     border: 1px solid #555;
     margin: 5px 0 0 5px;
     border-radius: 2px;
+    max-width: 200px;
+}
+
+.pic div.img {
+    display: inline-block;
+    padding: 10px;
 }
 
 .editLink {
@@ -16,6 +26,7 @@
     display: inline-block;
     margin-left: 5px;
     visibility: hidden;
+    color: #555;
 }
 
 :hover > .editLink {
