Format following rows. Include profile info in follow GraphQL queries.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -42,6 +42,15 @@
     width: 100%;
     grid-template-columns: repeat(3, max-content);
 }
+
+.followers .row {
+    display: contents;
+}
+
+.followers .row:first-of-type {
+    font-weight: bold;
+}
+
 .followers div {
     padding: 0 5px;
 }
