Fix error on profiles without followers or following. Display pic in its own column. Use short tx hash and link to tx modal. Crop profile images.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+    height: 100%;
+}
+
 .header {
     display: grid;
     width: 100%;
@@ -9,10 +13,12 @@
 }
 
 .pic .img {
+    object-fit: cover;
     border: 1px solid #555;
-    margin: 10px 0 0 10px;
-    border-radius: 2px;
-    max-width: 100px;
+    margin: 10px 0 10px 10px;
+    border-radius: 5px;
+    width: 75px;
+    height: 75px;
 }
 
 .pic div.img {
@@ -38,9 +44,11 @@
 }
 
 .followers {
+    border-top: 1px solid #ccc;
     display: grid;
     width: 100%;
-    grid-template-columns: repeat(4, max-content);
+    grid-template-columns: repeat(5, minmax(max-content, 1fr));
+    outline: none;
 }
 
 .followers .row {
@@ -48,15 +56,19 @@
 }
 
 .followers .img {
-    max-width: 50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 3px;
 }
 
-.followers .row:first-of-type {
-    font-weight: bold;
-}
-
-.followers div {
+.followers .row > div {
     padding: 0 5px;
+}
+
+.followers .row:first-of-type > div {
+    background: #eee;
+    padding: 3px 5px;
+    border-right: 1px solid #ccc;
 }
 
 .txLink {
