Fix issue when tx inputs missing from db. Show profile text on multiple lines. Include profile text with followers/following. Scroll follower list while still showing info header.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -61,6 +61,10 @@
     margin-left: 10px;
 }
 
+.text {
+    white-space: pre-line;
+}
+
 .header_modal .info button {
     margin-right: 10px;
 }
@@ -104,6 +108,8 @@
     border-top: 1px solid #ccc;
     display: grid;
     width: 100%;
+    height: calc(100% - 113px);
+    overflow: scroll;
     grid-template-columns: repeat(3, minmax(max-content, 1fr));
     outline: none;
 }
