--- a/renderer/components/modal/modal.module.css
+++ b/renderer/components/modal/modal.module.css
@@ -5,10 +5,8 @@
     left: 0;
     right: 0;
     bottom: 0;
-    display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 10;
 }
 
 .modal {
@@ -16,4 +14,5 @@
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
+    max-height: calc(100% - 80px);
 }
