Beginning of like post form. Update CreateTransaction to support multiple outputs. Include post with like modal. Handling for no likes in likes list. Use icons in main profile buttons. Common max value function.

--- a/renderer/styles/profile.module.css
+++ b/renderer/styles/profile.module.css
@@ -301,6 +301,18 @@
     margin-left: 5px;
 }
 
+.no_results {
+    padding: 10px;
+    text-align: center;
+    grid-column: span 3;
+    background: #fff;
+    border-radius: 5px;
+    border-width: 0 1px 1px;
+    border-style: solid;
+    border-color: #999;
+    font-weight: bold;
+}
+
 .set_profile {
     background: #fff;
     padding: 10px;
