--- a/renderer/styles/chat.module.css
+++ b/renderer/styles/chat.module.css
@@ -1,25 +1,30 @@
 .wrapper {
     width: 100%;
     height: 100%;
+    display: flex;
 }
 
 .sidebar {
-    width: 99px;
+    width: 95px;
     height: 100%;
-    display: inline-block;
-    vertical-align: top;
     background: #f5f5f5;
-    border-right: 1px solid #ccc;
 }
 
 .sidebar h2 {
     margin: 10px 10px;
 }
 
-.content {
-    width: calc(100% - 100px);
+.sidebar_handle {
+    background: #f5f5f5;
+    width: 4px;
     height: 100%;
-    display: inline-block;
+    cursor: col-resize;
+    border-right: 1px solid #ccc;
+}
+
+.content {
+    flex-grow: 1;
+    height: 100%;
     vertical-align: top;
 }
 
@@ -31,7 +36,7 @@
     overflow-y: auto;
 }
 
-.posts .post:first-child {
+.posts .post:last-child {
     margin-top: auto;
 }
 
@@ -85,7 +90,7 @@
 
 .sender {
     height: 39px;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid #555;
 }
 
 .sender input[type=text] {
