--- a/renderer/styles/chat.module.css
+++ b/renderer/styles/chat.module.css
@@ -8,10 +8,26 @@
     width: 95px;
     height: 100%;
     background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar_header {
+    width: calc(100% + 4px);
 }
 
 .sidebar h2 {
     margin: 10px 10px;
+}
+
+.sidebar_content {
+    padding: 10px;
+    width: calc(100% - 16px);
+    margin-top: auto;
+}
+
+.sidebar_content button {
+    cursor: pointer;
 }
 
 .sidebar_handle {
