--- a/renderer/styles/chat.module.css
+++ b/renderer/styles/chat.module.css
@@ -5,7 +5,7 @@
 }
 
 .sidebar {
-    width: 95px;
+    width: 125px;
     height: 100%;
     background: #f5f5f5;
     display: flex;
@@ -107,6 +107,12 @@
 .sender {
     height: 39px;
     border-top: 1px solid #555;
+}
+
+.sender fieldset {
+    border: none;
+    margin: 0;
+    padding: 0;
 }
 
 .sender input[type=text] {
