--- a/renderer/styles/chat.module.css
+++ b/renderer/styles/chat.module.css
@@ -5,7 +5,7 @@
 }
 
 .sidebar {
-    width: 125px;
+    width: 150px;
     height: 100%;
     background: #f5f5f5;
     display: flex;
@@ -15,6 +15,19 @@
 .sidebar_header {
     width: 100%;
     overflow: auto;
+    height: 40px;
+}
+
+.sidebar_header form {
+    width: 100%;
+    height: 100%;
+}
+
+.sidebar_header input {
+    width: calc(100% - 20px);
+    height: calc(100% - 10px);
+    padding: 5px 10px;
+    border: none;
 }
 
 .sidebar h2 {
@@ -68,12 +81,35 @@
     vertical-align: top;
 }
 
+.content_header {
+    width: 100%;
+    overflow: auto;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+}
+
+.content_header h2 {
+    padding: 5px 10px;
+    margin: 0;
+    flex: 1;
+}
+
+.content_header_buttons {
+    padding: 5px 10px;
+}
+
+.content_header_buttons button {
+    cursor: pointer;
+}
+
 .posts {
     width: 100%;
-    height: calc(100% - 40px);
+    height: calc(100% - 81px);
     display: flex;
     flex-direction: column-reverse;
     overflow-y: auto;
+    border-top: 1px solid #ccc;
 }
 
 .posts .post:last-child {
